bobcat (3.11.00)

  * Several man-pages were updated, mainly textual corrections.

  * Added OFdStreambuf constructor and open member expecting a std::string
    const & defining the name of the stream to receive the filtered
    information. 



bobcat (3.10.01)

  * Library constrction scripts cleanup so it supports environment variables:
    LDFLAGS, CPPFLAGS, CXXFLAGS and CXX

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 22 Jul 2012 13:58:01 +0200

bobcat (3.10.00)
    
  * Added class Signal, allowing context to be used by programs receiving
    signals. 

  * Added to the class User members (egroupid, euserid) to retrieve the
    effective group and user-ids and a member (inGroup) to determine whether
    the user is a member of a specified group.

  * Added to the class Stat a member (access) returning true if specified
    read, write and/or execute permissions are granted for a provided
    FBB::User object.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 28 Jun 2012 22:29:46 +0200

bobcat (3.01.00)

  * Repaired a bug in DateTime: its dstCorrection(bool *ok) member failed to
    set the ok boolean to true if the localime_r performed correctly.

  * According to the man-page localtime_r does not assume that tzset(3) has
    been called, but leaves this to the calling program. Localtime_r's
    man-page states: 
        For  portable  code  tzset  should  be  called before localtime_r().
    DateTime::dstCorrection(bool *) now calls tzset before calling
    localtime_r. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 14 May 2012 11:43:08 +0200

bobcat (3.00.02)

  * Cosmetic split of configile/beginre.cc into two sources, one holding the
    deprecated member ConfigFile::begin, the other one holding 
    ConfigFile__::begin. 

  * All classes that may throw Bobcat's Errno exceptions now include
    bobcat/errno in their class-level header files.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 10 May 2012 13:50:36 +0200

bobcat (3.00.01)
