@@ -21,33 +21,35 @@ Entries below, tagged with `(cont)' were mentioned earlier in the next
 hierarchy. Entries tagged with (Obs) are obsolete, and will be removed in a
 future relase: 
 
-0   X2a     Hash   Hostent  TypeTrait   Swap     ReadLineBuf ReadLineHistory
-                                |                     |
-                      +---------+--------+            |
-                      |         |        |       ReadLineStream
-                    FnWrap   foreach   repeat
+0   X2a     Hash   Hostent  TypeTrait   Swap     Indent     ReadLineHistory
+                                |                
+                          +-----+------+
+                          |            |
+                        binops       repeat              
+                  
 
-
-0                  SyslogBuf          RandBuffer        Indent      RefCount
-                       |                   |
-                  SyslogStream         IRandStream                  
+0   MultiStreambuf     SyslogBuf      RandBuffer        ReadLineBuf
+                           |               |                 |        
+                      SyslogStream     IRandStream      ReadLineStream
                                            |
-0   DateTime             Errno             |                      LogBuffer
-       |                   |               |                          |
-       |                   |               |                          |
-       |       +-----------+               |                          |
-       |       |           |               |                          |
-       |      User         +------+        |                          |
-       |       |           |      |        |                          |
-       +-------+           |      +---+----+                          |
-       |                   |          |                               |
-     Stat                  |      EncryptBuf                          |
+                                           |
+0   DateTime       Errno                   |                
+       |             |                     |                      
+       |       +-----+-----+------+        |
+       |       |     |     |      |        |
+       |      User Signal  |      +---+----+                      
+       |       |           |          |                           
+       +-------+           |      EncryptBuf                      
+       |                   |                      
+       |   GS__            |                      
+       |    |              |                                      
+       +----+              |                                      
+       |                   |                                      
+      Stat                 |                                                
+       |                   |                                      LogBuffer
+      Glob                 |                                          |
                            |                                          |
       +-------+--------+---+---+------+------+-----+-------------+    |
-      |       |        |       |      |      |     |             |    |
-      |       | FnWrap |       |      |      |     |             |    |
-      |       |   |    |       |      |      |     |             |    |
-      |       +---+    |       |      |      |     |             |    |
       |       |        |       |      |      |     |             |    |
     BigInt    |     Pattern  OneKey   |      |     |             +--+-+
               |        |              |      |     |                |
@@ -69,12 +71,6 @@ future relase:
                 |                |       
             ClientSocket   ServerSocket  
 
-
-     Errno(cont)
-        |
-0     Signal
-
-
      Errno(cont)
         |
 0       +---------+--------+----+----+-----+------+----------+    IOStreambuf
@@ -84,13 +80,13 @@ future relase:
                                 |    +-----+------+----------+---------+
                                 |    |
                                 |    |
-                         +------+    |        FnWrap(cont)   Errno(cont)
-                         |      |    |            |               |
-                     TempStream |    |    +-------+-----------+   |  IUO
-                                |    |    |       |           |   |   |
-0                A2x            |    |    |       |           +---+---+
-                  |             |    |    |       |           | 
-               String           |    +----+  MultiStreambuf  Glob
+                         +------+    |                     
+                         |      |    |                     
+                     TempStream |    |                     
+                                |    |                     
+0                A2x            |    |                     
+                  |             |    |                     
+               String           |    +----+                
                   |             |         |
          +--------+----+        |         |
          |             |        |         |
@@ -108,14 +104,13 @@ future relase:
                             |                   A2x(cont)        
                             |                    |               
                             |                    |               
-0           OFdStreambuf    |   IFdStreambuf     |   OFilterStreambuf  lm  mlm
-                 |          |        |           |       |              |   |
-                 |          |        |           |       |              |   |
-                 |          |        |           |   +---+              |   |
-                 |          |        |           |   |   |              |   |
-                 |          |        |           +---+   |              |   |
-                 |          |        |           |       |              |   |
-                 |          |        |     OHexStreambuf |              |   |
+0           OFdStreambuf    |   IFdStreambuf     |   OFilterStreambuf  
+                 |          |        |           |       |             
+                 |          |        |           |   +---+             
+                 |          |        |           |   |   |             
+                 |          |        |           +---+   |             
+                 |          |        |           |       |             
+                 |          |        |     OHexStreambuf |             lm  mlm
                  |          |        |           |       |              |   |
          +-------+          |        +----+      |       +-------+------+---+
          |       |          |        |    |      |               |        
@@ -150,14 +145,11 @@ future relase:
         |        Table    TableBuf
         |
         |
-        |   Stat(cont) Pattern(cont)  X2a(cont)  foreach(cont)
-        |       |           |            |           |
-        +-------+-----------+-----+------+-----------+ 
+        |   Stat(cont) Pattern(cont)  X2a(cont)
+        |       |           |            |     
+        +-------+-----------+-----+------+
                                   |
                                   |
                                  CGI
-
-
-
 
 
