@@ -1,0 +1,10 @@
+        itemization(
+        it() bf(BLOCK_DEVICE): the object represents a block device
+        it() bf(CHARACTER_DEVICE): the object represents a character device
+        it() bf(DIRECTORY): the object represents a directory
+        it() bf(FIFO): the object represents a named pipe (a queue)
+        it() bf(REGULAR_FILE): the object represents a regular file
+        it() bf(SOCKET): the object represents a socket
+        it() bf(SYMBOLIC_LINK): the object represents a symbolic link
+        it() bf(ANY): any of the above types
+        )
