@@ -26,7 +26,7 @@ manpagesection(INHERITS FROM)
 manpagesection(ENUMERATIONS)
 
     bf(Stat::Combine): nl() 
-        This enumeration has the following values:
+        This enumeration defines the following values:
         itemization(
         it() bf(ALL): require all of the specified bf(Mode) or 
                 bf(SpecialMode) values to match;
@@ -35,7 +35,7 @@ manpagesection(ENUMERATIONS)
         )
  
     bf(Stat::Mode): nl() 
-        This enumeration has the following values:
+        This enumeration defines the following values:
         itemization(
        it() bf(UR): the owner of the object has read permissions
        it() bf(UW): the owner of the object has write permissions
@@ -55,7 +55,7 @@ manpagesection(ENUMERATIONS)
         )
  
     bf(Stat::SpecialMode): nl() 
-        This enumeration has the following values:
+        This enumeration defines the following values:
         itemization(
         it() bf(SUID): set UID bit is up
         it() bf(SGID): set GID bit is up
@@ -63,16 +63,9 @@ manpagesection(ENUMERATIONS)
         )
  
     bf(Stat::Type): nl() 
-        This enumeration has the following values:
-        itemization(
-        it() bf(BLOCK_DEVICE): the object represents a block device
-        it() bf(CHARACTER_DEVICE): the object represents a character device
-        it() bf(DIRECTORY): the object represents a directory
-        it() bf(FIFO): the object represents a named pipe (a queue)
-        it() bf(REGULAR_FILE): the object represents a regular file
-        it() bf(SOCKET): the object represents a socket
-        it() bf(SYMBOLIC_LINK): the object represents a symbolic link
-        )
+        This enumeration, which is identical to the bf(glob)(3bobcat) tt(Type)
+            enumeration),  defines the following values:
+        includefile(gstype.yo)
 
 manpagesection(CONSTRUCTORS)
     itemization(
@@ -214,7 +207,7 @@ manpagefiles()
     em(bobcat/stat) - defines the class interface
 
 manpageseealso()
-    bf(bobcat)(7), bf(stat)(3)
+    bf(bobcat)(7), bf(glob)(3bobcat), bf(stat)(3)
 
 manpagebugs()
     None Reported.
