@@ -1,0 +1,7 @@
+#include "glob.ih"
+
+char const *const *Glob::begin() const
+{
+    return d_share->begin;
+}
+
