@@ -1,6 +1,6 @@
 #include "glob.ih"
 
-void Glob::destroy()
+Glob::~Glob()
 {
     if (!d_share)           // for the move-operations
         return;
@@ -8,6 +8,8 @@ void Glob::destroy()
     if (!--d_share->users)
     {
         globfree(&d_share->globStruct);
+        delete[] d_share->begin;
         delete d_share;
     }
 }
+
