@@ -4,8 +4,8 @@ tput clear
 
 GPP="g++ --std=c++0x"
 
-# CMD="$GPP -o driver -Wall -I../ driver.cc -L../tmp -lglob -lbobcat -s"
-CMD="$GPP -o driver -Wall -I../../tmp driver.cc -L../../tmp/lib -lbobcat -s"
+CMD="$GPP -o driver -Wall -I../ driver.cc -L../tmp -lglob -lbobcat -s"
+# CMD="$GPP -o driver -Wall -I../../tmp driver.cc -L../../tmp/lib -lbobcat -s"
 # CMD="$GPP -o driver -Wall -I../ driver.cc -L../tmp -lglob -lbobcat -s"
 # CMD="$GPP -o driver -Wall *.cc -lbobcat -s"
 
