@@ -1,0 +1,7 @@
+#include "glob.ih"
+
+char const *const *Glob::end() const
+{
+    return d_share->end;
+}
+
