@@ -1,6 +1,6 @@
 #include "glob.ih"
 
-void Glob::copy(Glob const &other)
+Glob::Glob(Glob const &other)
 {
     d_share = other.d_share;
     ++d_share->users;
