@@ -1,0 +1,7 @@
+#include "glob.ih"
+
+size_t Glob::size() const
+{
+    return d_share->size;
+}
+
