@@ -1,12 +1,19 @@
 bobcat (3.11.00)
 
-  * Several man-pages were updated, mainly textual corrections.
-
   * Added OFdStreambuf constructor and open member expecting a std::string
     const & defining the name of the stream to receive the filtered
     information. 
 
+  * Glob offers an additional constructor allowing users to specify the type
+    of directory entries they are interested in (e.g., DIRECTORY,
+    REGULAR_FILE, or any bitor-ed combination. The flags defined in Bobcat's
+    Stat class are identical to those that are available in Glob.
 
+  * Glob now uses the pimpl design with all its public members.
+
+  * Several man-pages were updated, mostly textual corrections.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 27 Oct 2012 12:14:35 +0200
 
 bobcat (3.10.01)
 
